--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@
 
 body {
     height: 100vh;
-    text-align: center;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -16,6 +15,7 @@ body {
 h1 {
     font-family: Arial, Helvetica, sans-serif;
     padding-bottom: 20px;
+    color: rgb(0, 158, 158);
 }
 
 .square {
@@ -24,14 +24,40 @@ h1 {
     margin: 2px;
     background-color: aqua;
     display: inline-block;
+    border-radius: 7px;
+}
+
+.o,
+.x {
+    position: relative;
+}
+
+.o:after {
+    content: "\2B55";
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, 0);
+    font-size: 50px;
+    line-height: 100px;
+}
+
+.x:after {
+    content: "\274C";
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, 0);
+    font-size: 50px;
+    line-height: 100px;
 }
 
 #reset_btn {
-    padding: 15px 40px;
+    padding: 15px 80px;
     margin-top: 20px;
     border: none;
-    background-color: rgb(0, 177, 177);
+    background-color: rgb(0, 158, 158);
     color: white;
     font-weight: bold;
     cursor: pointer;
+    border-radius: 7px;
+    letter-spacing: 1px;
 }
